fix text overlapping $ on currency input question in rtl mode

--- a/server/app/assets/stylesheets/northstar/_uswds-theme-custom-styles.scss
+++ b/server/app/assets/stylesheets/northstar/_uswds-theme-custom-styles.scss
@@ -544,6 +544,10 @@ main {
     padding-inline-start: 16px;
   }
 
+  .usa-input-prefix + input {
+    padding-inline-start: 2.5rem;
+  }
+
   // -- start
   /* Make the info/alert icons appear to the right of the label in RTL languages. */
   .usa-alert__body::before {
